--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
       },
       "scripts": {
             "dev": "vite",
+            "prebuild": "mkdir -p dist",
             "build": "vite build"
       }
 }
