--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
       "version": "0.1.0",
       "private": true,
       "dependencies": {
+            "clsx": "*",
+            "gsap": "^3.13.0",
             "react": "^18.3.1",
             "react-dom": "^18.3.1",
-            "clsx": "*",
             "tailwind-merge": "*"
       },
       "devDependencies": {
